--- a/src/components/container/container.module.css
+++ b/src/components/container/container.module.css
@@ -2,7 +2,7 @@
 .container{
     font-size: 1.2rem;
     padding: 0.5%;
-    width: 40%;
+    width: 30%;
     height: 80vh;
     background-color: black;
     color: white;
@@ -12,6 +12,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.479);
+    
 }
 
 .row{
@@ -25,4 +27,26 @@
 
 
 
+
+@media screen and (max-width: 500px){
+    .container{
+        width: 50%;
+    }
+    .row{
+        margin: 2%;
+        width: 100%;
+
+    }
+}
+@media screen and (max-width: 300px){
+    .container{
+        width: 70%;
+        
+    }
+    .row{
+        margin: 3%;
+        width: 100%;
+
+    }
+}
 
