--- a/src/components/screen/screen.module.css
+++ b/src/components/screen/screen.module.css
@@ -1,20 +1,23 @@
 .pantalla{
     height: 15%;
     width: 90%;
-    border-radius: 50px;
-    margin-bottom: 20px;
+    border-radius: 20px;
+    margin-bottom: 5%;
     display: flex;
-    
+    overflow: hidden;
     justify-content: flex-end;
     align-items: center;
     font-weight: bold;
     font-size: 1.5rem;
     font-family: 'Times New Roman', Times, serif;
-    color:white;
-    padding: 11px;
-    padding-top: 30px;
+    color:black;
+    padding: 2%;
+    padding-top: 10%;
     background-color: rgb(247, 235, 235);
     border: 1px solid #888;
     box-shadow: -1px 2px 2px 2px white;
 
 }
+
+
+
