se hacen cambios esteticos finales

--- a/src/components/container/container.module.css
+++ b/src/components/container/container.module.css
@@ -4,7 +4,7 @@
     padding: 0.5%;
     width: 30%;
     height: 80vh;
-    background-color: black;
+    background-color: #021024;
     color: white;
     border-radius: 20px;
 
