--- a/src/components/result/result.module.css
+++ b/src/components/result/result.module.css
@@ -7,12 +7,13 @@
     align-items: center;
     font-weight: bold;
     font-size: 1.3rem;
-    background-color: rgb(105, 24, 58);
+    background-color: #C1E8FF;
     cursor:pointer;
     margin: 2%;
-    border: 2px solid white;
+    border: 2px solid #5483B3;
     border-radius: 20px;
-    color: white;
+    color: black;
+    
     user-select: none;
 }
 
